<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lk_persegi"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai_1"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/nilai1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nilai_2"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/nilai2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="number"
        android:layout_marginBottom="10dp"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/luas_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/luas"
            android:onClick="luasPersegi"/>

        <Button
            android:id="@+id/keliling_persegi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/luas_persegi"
            android:text="@string/keliling"
            android:onClick="kelilingPersegi"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>